fixed alignment

--- a/ProGetter/css/style.scss
+++ b/ProGetter/css/style.scss
@@ -521,7 +521,15 @@ li{
     grid-gap: 20px;
     overflow: hidden;
   }
-
+.favorite-projects{
+  display: none;
+}
+.my-projects{
+  display:none;
+}
+.my-groups{
+  display:none;
+}
 .featured-mentors{
   margin: auto;
   padding: 0;
